<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_title_bg_height"
            android:background="#009688">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                android:fontFamily="@font/helvetica_neue_med"
                android:text="@string/app_name"
                android:textColor="#E8F5E9"
                android:textSize="@dimen/movie_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_detail"
                android:layout_width="@dimen/movie_poster_iv_width"
                android:layout_height="@dimen/movie_poster_iv_height"
                android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                android:contentDescription="@string/popular_movie"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                    android:fontFamily="@font/helvetica_neue_med"
                    android:textSize="@dimen/text_size"
                    tools:text="2015" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_for_all_sixteen_dp"
                    android:fontFamily="@font/helvetica_neue_med"
                    android:textSize="@dimen/text_size"
                    tools:text="8.1/10" />

                <Button
                    android:id="@+id/fav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_for_all_sixteen_dp"
                    android:layout_marginTop="@dimen/margin_for_all_sixteen_dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/helvetica_neue_med"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/mark_as_favorite_btn" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_for_all_sixteen_dp">

            <TextView
                android:id="@+id/movie_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                android:fontFamily="@font/helvetica_neue_light"
                android:textSize="@dimen/movie_description_tv"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem
                Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only " />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin_for_all_sixteen_dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_for_all_sixteen_dp"
            android:fontFamily="@font/helvetica_neu_bold"
            android:text="@string/trailers"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_btn"
                android:layout_width="@dimen/movie_trailer_player_iv_width"
                android:layout_height="@dimen/movie_trailer_player_iv_height"
                android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                android:src="@drawable/play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_for_all_sixteen_dp"
                android:fontFamily="monospace"
                android:text="@string/something_for_the_stage_two" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin_for_all_sixteen_dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_btn1"
                android:layout_width="@dimen/movie_trailer_player_iv_width"
                android:layout_height="@dimen/movie_trailer_player_iv_height"
                android:layout_margin="@dimen/margin_for_all_sixteen_dp"
                android:src="@drawable/play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_for_all_sixteen_dp"
                android:fontFamily="monospace"
                android:text="@string/something_for_the_stage_two" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>